--- a/app/index.html
+++ b/app/index.html
@@ -100,22 +100,21 @@ https://templatemo.com/tm-531-reflux
                               <label for="sales" class="nozel-label">Price : </label>
                               <input type="text" id="Price" disabled placeholder="180" class="nozel-input"> <br>
                          </div>
-                         <div class="nozel-board-children" style="width: 180px; padding: 0px;">
-                           <button class="nozel-btns" id="btn1">1</button>
-                           <button class="nozel-btns" id="btn2">2</button>
-                           <button class="nozel-btns" id="btn3">3</button>
-                           <button class="nozel-btns" id="btn4">4</button>
-                           <button class="nozel-btns" id="btn5">5</button>
-                           <button class="nozel-btns" id="btn6">6</button>
-                           <button class="nozel-btns" id="btn7">7</button>
-                           <button class="nozel-btns" id="btn8">8</button>
-                           <button class="nozel-btns" id="btn9">9</button>
-                           <button class="nozel-btns" id="btn0">0</button>
+                         <div class="nozel-board-children" style="width: 180px; padding: 0px;" id="nozel-btns-board">
+                           <button class="nozel-btns" onclick="keyPressed('1')">1</button>
+                           <button class="nozel-btns" onclick="keyPressed('2')">2</button>
+                           <button class="nozel-btns" onclick="keyPressed('3')">3</button>
+                           <button class="nozel-btns" onclick="keyPressed('4')">4</button>
+                           <button class="nozel-btns" onclick="keyPressed('5')">5</button>
+                           <button class="nozel-btns" onclick="keyPressed('6')">6</button>
+                           <button class="nozel-btns" onclick="keyPressed('7')">7</button>
+                           <button class="nozel-btns" onclick="keyPressed('8')">8</button>
+                           <button class="nozel-btns" onclick="keyPressed('9')">9</button>
+                           <button class="nozel-btns" onclick="keyPressed('0')">0</button>
                          </div>
 
-                         <div class="nozel-board-children" style="width: 80px;">
-                          <button class="nozel-btns" id="btnOn">O</button>
-                           <button class="nozel-btns" id="btnOff">F</button>
+                         <div class="nozel-board-children" style="width: 80px; background-color: rgb(7, 7, 7);">
+                           <img id="offOn-btn" src = "assets/images/turn-off.jpg" onclick="turnOnOff()" class="offOn-btn" alt=""> 
                            <button class="nozel-btns" id="btnClear">C</button>
                            <button class="nozel-btns" id="btnSell">S</button>
                      </div>
